[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/scenes/UI/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://resources/scenes/UI/MainTheme/KennySpaceFOn.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/scenes/UI/Settings.gd" type="Script" id=3]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -250.0
margin_right = 200.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 2.0
margin_right = 76.0
margin_bottom = 41.0
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeybindsContainer" type="VBoxContainer" parent="Panel"]
margin_left = 8.0
margin_top = 44.0
margin_right = 392.0
margin_bottom = 404.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Panel"]
margin_left = 4.0
margin_top = 438.0
margin_right = 396.0
margin_bottom = 485.0
rect_clip_content = true
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Panel/Buttons"]
margin_left = 91.0
margin_right = 185.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = " Back "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Panel/Buttons"]
margin_left = 205.0
margin_right = 300.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = " Save "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/Buttons/Save" to="." method="_on_Save_pressed"]
